{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 83,
  "lineage": "5deb5b3a-1880-6df5-5daa-072f8a59e177",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:internet-gateway/igw-047ad7bc1e5121620",
            "id": "igw-047ad7bc1e5121620",
            "owner_id": "003107248036",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "pre-demo-eks"
            },
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "igw-047ad7bc1e5121620",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:route-table/rtb-0a3f723d8ccf3d1a1",
            "id": "rtb-0a3f723d8ccf3d1a1",
            "owner_id": "003107248036",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047ad7bc1e5121620",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-rt",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-rt",
              "Project": "pre-demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "rtb-0a3f723d8ccf3d1a1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ef7733aa61ebec5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a3f723d8ccf3d1a1",
            "subnet_id": "subnet-05cdc190df497bb4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "rtbassoc-08ef7733aa61ebec5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064973d3ba86e8f27",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a3f723d8ccf3d1a1",
            "subnet_id": "subnet-0300e40834af18d46"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "rtbassoc-064973d3ba86e8f27",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:security-group/sg-0abfd1d1a88ab35be",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0abfd1d1a88ab35be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "003107248036",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-alb-sg",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-alb-sg",
              "Project": "pre-demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "sg-0abfd1d1a88ab35be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:security-group/sg-0d95886be08088769",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d95886be08088769",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abfd1d1a88ab35be"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-worker-nodes-sg",
            "name_prefix": "",
            "owner_id": "003107248036",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-worker-nodes-sg",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-worker-nodes-sg",
              "Project": "pre-demo-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "sg-0d95886be08088769",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:subnet/subnet-05cdc190df497bb4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cdc190df497bb4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003107248036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-subnet-1",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-subnet-1",
              "Project": "pre-demo-eks"
            },
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "subnet-05cdc190df497bb4c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:subnet/subnet-0300e40834af18d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300e40834af18d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "003107248036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-subnet-2",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-subnet-2",
              "Project": "pre-demo-eks"
            },
            "vpc_id": "vpc-0c8f9b25a7b6c9467"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "subnet-0300e40834af18d46",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:003107248036:vpc/vpc-0c8f9b25a7b6c9467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f2c3006454a5392",
            "default_route_table_id": "rtb-08d974b614ed7b6bd",
            "default_security_group_id": "sg-0f32f9f00fc4f3a9c",
            "dhcp_options_id": "dopt-03d210b7da93a2816",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8f9b25a7b6c9467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d974b614ed7b6bd",
            "owner_id": "003107248036",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "pre-demo-eks"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "pre-demo-eks"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "003107248036",
            "id": "vpc-0c8f9b25a7b6c9467",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}